--- a/app/globals.css
+++ b/app/globals.css
@@ -3,14 +3,14 @@
 @tailwind utilities;
 
 :root {
-  --background: #ffffff;
+  --background: #D6C6B5;
   --foreground: #171717;
 }
 
 @media (prefers-color-scheme: dark) {
   :root {
-    --background: #9c7665;
-    --foreground: #ededed;
+    --background: #D6C6B5;
+    --foreground: #171717;
   }
 }
 
